[project]
name = "IFN582-AS3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "bootstrap-flask>=2.5.0",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "dnspython>=2.8.0",
    "dominate>=2.9.1",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-mysqldb>=2.0.0",
    "flask-wtf>=1.2.2",
    "greenlet>=3.2.4",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "mysqlclient>=2.2.7",
    "numpy>=2.3.3",
    "typing-extensions>=4.15.0",
    "visitor>=0.1.3",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]